button spacing and font correction

--- a/src/style/category-carousel/carousel-section.css
+++ b/src/style/category-carousel/carousel-section.css
@@ -1,3 +1,6 @@
+.carousel-container{
+  padding: 0 60px;
+}
 .carousel-without-arrows .react-multiple-carousel__arrow {
   display: none !important;
 }
